Complete refactoring of the link-building process

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -79,7 +79,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 website.host=${WEBSITE_HOST:localhost}
 website.port=${WEBSITE_PORT:3000}
-website.url=${WEBSITE_URL:http://${website.host}:${website.port}}
+website.base-url=${WEBSITE_URL:http://${website.host}:${website.port}}
 
 # JWT Configuration
 jwt.secret=${SERVER_JWT_SECRET}
