--- a/dl4se-crawler/src/main/resources/crawler.properties
+++ b/dl4se-crawler/src/main/resources/crawler.properties
@@ -2,6 +2,9 @@ crawler.base-url=https://seart-ghs.si.usi.ch/api/r/search
 crawler.start-date=2008-01-01
 crawler.tmp-dir-prefix=crawler-
 crawler.scheduling.next-run-delay=PT6H
+crawler.analyzer.core-pool-size=2
+crawler.analyzer.max-pool-size=4
+crawler.analyzer.queue-capacity=64
 crawler.analyzer.max-parse-time=1000ms
 crawler.ignore.repository.names=
 crawler.ignore.repository.files.max-size=5MB
