--- a/dl4se-server/pom.xml
+++ b/dl4se-server/pom.xml
@@ -59,6 +59,10 @@
       <artifactId>spring-cloud-starter</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-context</artifactId>
     </dependency>
