Prefixing all platform-specific configuration properties with `platform`

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -77,18 +77,19 @@ spring.datasource.username=${DATABASE_USER:dl4se_admin}
 spring.datasource.password=${DATABASE_PASS:Lugano2022}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-website.host=${WEBSITE_HOST:localhost}
-website.port=${WEBSITE_PORT:3000}
-website.base-url=${WEBSITE_URL:http://${website.host}:${website.port}}
+# Website Configuration
+platform.website.host=${WEBSITE_HOST:localhost}
+platform.website.port=${WEBSITE_PORT:3000}
+platform.website.base-url=${WEBSITE_URL:http://${platform.website.host}:${platform.website.port}}
 
 # JWT Configuration
-jwt.secret=${SERVER_JWT_SECRET}
-jwt.tokens.valid-for=7d
+platform.jwt.secret=${SERVER_JWT_SECRET}
+platform.jwt.tokens.valid-for=7d
 
 # Scheduled Job Configuration
-scheduling.task-cleaner-cron=0 */15 * * * *
-scheduling.repo-maintainer-cron=0 0 0 * * SUN
-scheduling.view-maintainer-cron=0 0 0 * * *
+platform.scheduling.task-cleaner-cron=0 */15 * * * *
+platform.scheduling.repo-maintainer-cron=0 0 0 * * SUN
+platform.scheduling.view-maintainer-cron=0 0 0 * * *
 
 configuration.request_limit=3
 configuration.task_runner_count=2
