Inlining `ConfigurationInitializingBean` into `ConfigurationService`
Said service is now an `InitializingBean` that executes the exact same
code from the removed class. This approach is indeed better, as said
service implementation has direct access to `ConfigurationRepository`
that we would otherwise have to inject.

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -91,5 +91,6 @@ platform.scheduling.task-cleaner-cron=0 */15 * * * *
 platform.scheduling.repo-maintainer-cron=0 0 0 * * SUN
 platform.scheduling.view-maintainer-cron=0 0 0 * * *
 
-configuration.request_limit=3
-configuration.task_runner_count=2
+# Platform Environment Configuration
+platform.configuration-defaults.request_limit=3
+platform.configuration-defaults.task_runner_count=2
