Expose all management endpoints by default

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -6,13 +6,8 @@ server.port=${SERVER_PORT:8080}
 spring.banner.location=classpath:banner.txt
 
 # Actuator Configuration
-management.endpoints.enabled-by-default=false
-management.endpoint.health.enabled=true
-management.endpoint.logfile.enabled=true
-management.endpoint.metrics.enabled=true
-management.endpoint.shutdown.enabled=true
-management.endpoint.restart.enabled=true
-management.endpoints.web.exposure.include=health,logfile,metrics,shutdown,restart
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-headers=*
 management.endpoints.web.cors.allowed-methods=OPTIONS,GET,POST
