--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -27,8 +27,8 @@
     "crypto-js": "^4.1.1",
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.21",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
+    "sass": "~1.64.2",
+    "sass-loader": "^13.3.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^4.1.2",
