--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.7.0",
-    "@vuelidate/core": "^2.0.0-alpha.42",
-    "@vuelidate/validators": "^2.0.0-alpha.30",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.5",
     "axios": "^1.6.8",
