--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -18,7 +18,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "aos": "^2.3.4",
-    "autoprefixer": "10.4.5",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
