--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^3.9.1",
+    "chroma-js": "^2.4.2",
     "core-js": "^3.37.0",
     "crypto-js": "^4.2.0",
     "identicon.js": "^2.3.3",
