--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -11,10 +11,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint-vue": "vue-cli-service lint",
-    "lint-formatting": "prettier --check .",
-    "lint-eslint": "eslint .",
-    "lint": "npm run lint-vue && npm run lint-formatting && npm run lint-eslint"
+    "lint:vue": "vue-cli-service lint",
+    "lint:eslint": "eslint .",
+    "lint:formatting": "prettier --check .",
+    "lint": "npm-run-all lint:*"
   },
   "dependencies": {
     "@vue/composition-api": "^1.7.0",
@@ -54,6 +54,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^8.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.8.3",
     "vue-template-compiler": "^2.6.14"
   }
