--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -53,6 +53,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "2.8.3",
