--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
+    "bootstrap5-autocomplete": "^1.1.26",
     "chart.js": "^3.9.1",
     "chroma-js": "^2.4.2",
     "core-js": "^3.37.0",
