--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -33,6 +33,7 @@
     "crypto-js": "^4.2.0",
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.21",
+    "namesgenerator": "^0.0.1",
     "sass": "~1.64.2",
     "sass-loader": "^13.3.3",
     "vue": "^2.6.14",
