--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server Configuration
 server.servlet.context-path=/api
-server.port=${SERVER_PORT:8080}
+server.port=8080
 
 # Banner Configuration
 spring.banner.location=classpath:banner.txt
