--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,38 +1,21 @@
-name: Maven Build
+name: 'Build Java files with Maven'
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [ 'main' ]
+    paths: [ '**/*.java' ]
   pull_request:
-    branches: 
-      - 'main'
+    branches: [ 'main' ]
+    paths: [ '**/*.java' ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Setup Maven
+        uses: s4u/setup-maven-action@v1.13.0
         with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Install Included Libraries
-        run: >
-          mvn
-          --no-transfer-progress
-          install:install-file
-          -Dfile="./dl4se-src2abs/lib/javalexer.jar"
-          -DgroupId="edu.wm.cs"
-          -DartifactId="javalexer"
-          -Dversion="1"
-          -Dpackaging="jar"
+          java-version: 11
+          java-distribution: 'temurin'
       - name: Build with Maven
-        run: >
-          mvn
-          --batch-mode
-          --update-snapshots
-          --no-transfer-progress
-          package
+        run:  mvn -e --no-transfer-progress package
