--- a/.github/workflows/vue-build.yml
+++ b/.github/workflows/vue-build.yml
@@ -1,12 +1,20 @@
-name: Vue Build
+name: 'Build Vue project'
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [ 'main' ]
+    paths:
+      - '**/*.js'
+      - '**/*.vue'
+      - '**/*.json'
+      - '**/*.sass'
   pull_request:
-    branches:
-      - 'main'
+    branches: [ 'main' ]
+    paths:
+      - '**/*.js'
+      - '**/*.vue'
+      - '**/*.json'
+      - '**/*.sass'
 
 jobs:
   build:
@@ -15,21 +23,17 @@ jobs:
       run:
         working-directory: ./dl4se-website
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js 18.x
-        uses: actions/setup-node@v3
+      - name: Checkout latest
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '18'
           cache: 'npm'
-          cache-dependency-path: './dl4se-website/package-lock.json'
-
-      - name: Node Clean Install
-        run: npm clean-install
-
-      - name: Lint
+          cache-dependency-path: 'package-lock.json'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run ESLint
         run: npm run lint
-
       - name: Vue Build
-        run: npm run build --if-present
+        run: npm run build
