Server now generates a random JWT secret if non is specified
Goes without saying that this feature is meant for development only,
and should thus not be used in production, as each redeploy will cause
all existing tokens to become invalidated.

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -69,7 +69,7 @@ platform.website.port=${WEBSITE_PORT:3000}
 platform.website.base-url=${WEBSITE_URL:http://${platform.website.host}:${platform.website.port}}
 
 # JWT Configuration
-platform.jwt.secret=${SERVER_JWT_SECRET}
+platform.jwt.secret=
 platform.jwt.tokens.valid-for=7d
 
 # Scheduled Job Configuration
