--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -86,7 +86,7 @@ services:
       SERVER_MAIL_PASS: ${SERVER_MAIL_PASS}
       SERVER_SECURITY_USER: ${SERVER_SECURITY_USER}
       SERVER_SECURITY_PASS: ${SERVER_SECURITY_PASS}
-      SERVER_JWT_SECRET: ${SERVER_JWT_SECRET}
+      PLATFORM_JWT_SECRET: GeNeR4TeR4nd0mSeCrEt4nDp4StEhErE
       WEBSITE_URL: http://localhost:7031
     volumes:
       - ./logs:/logs
