--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -64,9 +64,7 @@ spring.datasource.password=${DATABASE_PASS:Lugano2022}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Website Configuration
-platform.website.host=${WEBSITE_HOST:localhost}
-platform.website.port=${WEBSITE_PORT:3000}
-platform.website.base-url=${WEBSITE_URL:http://${platform.website.host}:${platform.website.port}}
+platform.website.base-url=http://localhost:3000
 
 # JWT Configuration
 platform.jwt.secret=
