Simplify security defaults

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Security Configuration
-spring.security.user.name=${SERVER_SECURITY_USER}
-spring.security.user.password=${SERVER_SECURITY_PASS}
-spring.security.user.roles=admin
+spring.security.user.name=dl4se_admin
+spring.security.user.password=Lugano2022
+spring.security.user.roles=ADMIN
 
 # Pagination Configuration
 spring.data.web.pageable.size-parameter=size
