--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.mail.enabled=true
 spring.mail.test-connection=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${SERVER_MAIL_ADDR}
-spring.mail.password=${SERVER_MAIL_PASS}
+spring.mail.username=example@gmail.com
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
