--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -58,9 +58,9 @@ spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.SQL=OFF
 
 # Spring Datasource Configuration
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:dl4se}
-spring.datasource.username=${DATABASE_USER:dl4se_admin}
-spring.datasource.password=${DATABASE_PASS:Lugano2022}
+spring.datasource.url=jdbc:postgresql://localhost:5432/dl4se
+spring.datasource.username=dl4se_admin
+spring.datasource.password=Lugano2023
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Website Configuration
