--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.jpa.properties.hibernate.jdbc.fetch_size=500
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
 # Spring Datasource Configuration
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:dl4se}
-spring.datasource.username=${DATABASE_USER:dl4se_admin}
-spring.datasource.password=${DATABASE_PASS:Lugano2022}
+spring.datasource.url=jdbc:postgresql://localhost:5432/dl4se
+spring.datasource.username=dl4se_admin
+spring.datasource.password=Lugano2023
 spring.datasource.driver-class-name=org.postgresql.Driver
