--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -59,7 +59,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.8.3",
-    "vue-template-compiler": "^2.6.14"
+    "prettier": "2.8.3"
   }
 }
