--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -53,11 +53,11 @@
     "@vue/cli-plugin-router": "~5.0.6",
     "@vue/cli-plugin-vuex": "~5.0.6",
     "@vue/cli-service": "~5.0.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.8.3"
+    "prettier": "^3.3.2"
   }
 }
