Update `author` information

--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "author": {
     "name": "Ozren Dabić",
-    "email": "dabico@usi.ch",
-    "url": "https://dabico.github.io/"
+    "email": "ozren.dabic@usi.ch",
+    "url": "https://dabico.github.io"
   },
   "license": "MIT",
   "scripts": {
