Add `description` property

--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -2,6 +2,7 @@
   "name": "dl4se-website",
   "version": "1.0.0",
   "private": true,
+  "description": "Building Training Datasets for Deep Learning Models in Software Engineering and Empirical Software Engineering Research",
   "author": {
     "name": "Ozren Dabić",
     "email": "ozren.dabic@usi.ch",
