--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -27,6 +27,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@unhead/vue": "^1.9.13",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "aos": "^2.3.4",
