--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -43,6 +43,7 @@
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.21",
     "namesgenerator": "^0.0.1",
+    "register-service-worker": "^1.7.2",
     "sass": "~1.64.2",
     "sass-loader": "^13.3.3",
     "vue": "^2.7.16",
@@ -60,6 +61,7 @@
     "@babel/eslint-parser": "^7.24.7",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-pwa": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
