--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -41,7 +41,7 @@
     "core-js": "^3.37.1",
     "crypto-js": "^4.2.0",
     "identicon.js": "^2.3.3",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "namesgenerator": "^0.0.1",
     "register-service-worker": "^1.7.2",
     "sass": "~1.64.2",
