Downgrade HLJS and add official Vue 2 plugin
> [!NOTE]
> We can not use a newer version for the plugin. If there are two
> different dependencies registered, the plugin will cease to work.

--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -27,6 +27,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^1.0.2",
     "@unhead/vue": "^1.9.13",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
@@ -39,7 +40,7 @@
     "chroma-js": "^2.4.2",
     "core-js": "^3.37.1",
     "crypto-js": "^4.2.0",
-    "highlight.js": "^11.9.0",
+    "highlight.js": "10.7.3",
     "identicon.js": "^2.3.3",
     "lodash-es": "^4.17.21",
     "namesgenerator": "^0.0.1",
